--- a/challenge_level3/Test/work/config.yaml
+++ b/challenge_level3/Test/work/config.yaml
@@ -23,12 +23,12 @@ priv-mode:
 #                           
 # ---------------------------------------------------------------------------------
 general:
-  total_instructions: 2
+  total_instructions: 1000
   regs_not_use: x1,x2
-  custom_trap_handler: false
+  custom_trap_handler: true
   code_start_address: 0x80000000
   default_program_exit: true
-  delegation: 0x0
+  delegation: 0xfff
 
 # ---------------------------------------------------------------------------------
 # Distribution of instructions according to ISA extensions
@@ -41,8 +41,8 @@ isa-instruction-distribution:
   rel_sys.csr: 0
   rel_rv32i.ctrl: 0
   rel_rv32i.compute: 1
-  rel_rv32i.data: 1
-  rel_rv32i.fence: 1
+  rel_rv32i.data: 0
+  rel_rv32i.fence: 0
   rel_rv64i.compute: 0
   rel_rv64i.data: 0
   rel_rv32i.zba: 0
@@ -104,7 +104,7 @@ branch-control:
 #       recursion_depth:    Number of times the recursive function is called
 # ---------------------------------------------------------------------------------
 recursion-options:
-  recursion-enable: true
+  recursion-enable: false
   recursion-depth: 10
   recursion-calls: 5
 
@@ -203,7 +203,7 @@ data-hazards:
 
 program-macro:
   pre_program_macro: "add x0,x0,x0"
-  post_program_macro: "li gp,1; \n sw gp, tohost, t5;\n fence.i;\n li t6,  0x20000; \n la t5, begin_signature; \n sw t5, 0(t6); \n la t5, end_signature \n sw t5, 8(t6); \n sw t5,  12(t6);"        
+  post_program_macro: "add x0,x0,x0"
   pre_branch_macro: "add x0,x0,x0"
   post_branch_macro: "add x0,x0,x0"
   ecause00: "random"
@@ -221,7 +221,6 @@ program-macro:
   ecause12: "random"
   ecause13: "random"
   ecause14: "random"
-
 
 # ---------------------------------------------------------------------------------
 # Self Checking 
