--- a/challenge_level3/Test3/Makefile 
+++ b/challenge_level3/Test3/Makefile 
@@ -1,24 +1,16 @@
+all: compile disass spike sim
 
-all: gen compile disass spike sim
-
-gen: clean
-	@echo '[UpTickPro] Test Generation ------'
-	pip install aapg
-	aapg setup
-	aapg gen --config_file $(PWD)/run.sh --asm_name test --output_dir $(PWD) --arch rv32
-
-compile:
-	@echo '[UpTickPro] Test Compilation ------'
-	riscv32-unknown-elf-gcc -march=rv32i -mabi=ilp32 -static -mcmodel=medany -fvisibility=hidden -nostdlib -nostartfiles -I$(PWD)/work/common -T$(PWD)/test.ld test.S $(PWD)/work/common/crt.S -o test.elf
+compile: clean
+	@echo '[UpTickPro] Compilation ------'
+	riscv32-unknown-elf-gcc -march=rv32i -mabi=ilp32 -static -mcmodel=medany -fvisibility=hidden -nostdlib -nostartfiles  -I$(PWD)/common -T$(PWD)/common/link.ld test.S -o test.elf
 
 disass: compile
-	@echo '[UpTickPro] Test Disassembly ------'
 	riscv32-unknown-elf-objdump -D test.elf > test.disass
 
 spike: compile
-	@echo '[UpTickPro] Spike Run ------'
-	spike --isa=rv32i test.elf 
-	spike --isa=rv32i +signature=test_spike_signature.log test.elf
+	@echo '[UpTickPro] Spike ------'
+	/tools/mod_spike/bin/spike --isa=rv32i test.elf 
+	/tools/mod_spike/bin/spike -c --isa=rv32i +signature=test_spike_signature.log test.elf
 
 sim: spike
 	@echo '[UpTickPro] Simulation ------'
@@ -29,7 +21,7 @@ sim: spike
 	cp temp.dump rtl.dump
 	@echo '[UpTickPro] Comparison ------'
 	diff rtl.dump spike.dump
-
+	
 clean:
 	@echo '[UpTickPro] Clean ------'
-	rm -rf *.elf *.disass *.log *.dump app_log code.mem signature boot.* riscv_buggy  work *.S *.ld *.ini
+	rm -rf *.elf *.disass *.log *.dump app_log code.mem signature boot.* riscv_buggy
